# EasyAIVtuber

./: cam_web.html  main.bat  main.py  pyproject.toml  requirements.txt
